<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bowenwu.lab1.MainActivity">

    <TextView style="@style/title"
        android:id="@+id/main_title"
        android:text="@string/main_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        android:layout_marginTop="20dp"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/sid"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="8dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sid"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="8dp">
        <android.support.design.widget.TextInputEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_password"/>
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton style="@style/radio_button"
            android:id="@+id/radio_button_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="@string/radio_button_student" />
        <RadioButton style="@style/radio_button"
            android:id="@+id/radio_button_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_stuff"/>
    </RadioGroup>

    <Button style="@style/button"
        android:id="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@+id/signin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button style="@style/button"
        android:id="@+id/signin"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/login"
        android:text="@string/button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.constraint.ConstraintLayout>
